--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "node src/index.js",
     "start": "NODE_ENV=production node src/index.js"
   },
   "dependencies": {
